Signed-off-by: zhixiaoyang <913151232@qq.com>

--- a/source/widget/courseStudycenter/bombBox.html
+++ b/source/widget/courseStudycenter/bombBox.html
@@ -33,11 +33,11 @@
                             <td>--</td>
                         </tr>
                         <tr>
-                            <td>2015秋季中</td>
+                            <td>2015暑期期末测试强化班</td>
                             <td>2015-10-24</td>
                             <td>2015-11-01</td>
-                            <td>未开启</td>
-                            <td class="static">补考</td>
+                            <td >已结束</td>
+                            <td class="static">查看</td>
                         </tr>
                         <tr>
                             <td>2015暑期期末测试强化班</td>
@@ -46,25 +46,39 @@
                             <td class="opened">已开启</td>
                             <td class="static">进入</td>
                         </tr>
-                    </tbody>
-                </table>
-
-                <table class="table material">
-                    <tbody>
                         <tr>
-                            <td>
-                                <p>第1讲：加减法巧算（一）（暑期课程）</p>
-                                <a href="##" class="load-btn success button">立即下载</a>
-                                <span>(已下载24次)</span>
-                            </td>
-                            <td>
-                                <p>第1讲：加减法巧算（一）（暑期课程）</p>
-                                <a href="##" class="load-btn success button">立即下载</a>
-                                <span>(已下载24次)</span>
-                            </td>
+                            <td>2015秋季中</td>
+                            <td>2015-10-24</td>
+                            <td>2015-11-01</td>
+                            <td>已结束</td>
+                            <td class="static">补考</td>
                         </tr>
                     </tbody>
                 </table>
+                
+                <div class="material-wrap">
+                    <ul class="material-tab">
+                        <li class="current">讲义</li>
+                        <li>资料</li>
+                        <a href="##" class="cant-load">讲义资料无法下载？</a>
+                    </ul>
+                    <table class="table material">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <p>第1讲：加减法巧算（一）（暑期课程）</p>
+                                    <a href="##" class="load-btn success button">立即下载</a>
+                                    <span>(已下载24次)</span>
+                                </td>
+                                <td>
+                                    <p>第1讲：加减法巧算（一）（暑期课程）</p>
+                                    <a href="##" class="load-btn success button">立即下载</a>
+                                    <span>(已下载24次)</span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <div class="bom-delay"> 
                     <div class="delay-fsd"><img src="img/bom-delay.png"></div>
                     <div class="delay-detail">
