--- a/source/widget/courses/index.html
+++ b/source/widget/courses/index.html
@@ -50,9 +50,6 @@
                         <div class="avatar-photo">
                             <img src="img/default_photo.png">
                         </div>
-                        <div class="avatar-name">
-                            <a target="_blank"  href="###" class="ui-username">赵紫涵</a>
-                        </div>
                     </div>
                     <div class="course-detail">
                         <p class="course-title">
@@ -61,6 +58,7 @@
                             <a href="##" class="title-detail">【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
                         </p>
                         <p class="tip-for">适用于：想要培养化学学习兴趣的初三学员</p>
+                        <p class="avatar-name"><a target="_blank"  href="###" class="ui-username">赵紫涵</a></p>
                         <p class="amount-show">
                             <a href="##" class="small course-gray button course-btn"><em class="button-icon icon-will"></em>立即听课</a>
                         </p>
@@ -73,10 +71,18 @@
                 <div class="course-list course-test">
                     <div class="ui-avatar">
                         <div class="avatar-photo">
-                            <img src="img/default_photo.png">
-                        </div>
-                        <div class="avatar-name">
-                            <a target="_blank"  href="###" class="ui-username">赵紫涵</a>
+                            <ul class="avatar-items">
+                                <li><a href="##"><img src="img/default_photo.png"></a></li>
+                                <li><a href="##"><img src="img/default_photo.png"></a></li>
+                            </ul>
+                            <div class="avatar-roll">
+                                <a class="prev none" href="javascript:void(0);">
+                                    <em class="icon-chevron-left">左</em>
+                                </a>
+                                <a class="next " href="javascript:void(0);">
+                                    <em class="icon-chevron-right">右</em>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="course-detail">
@@ -87,6 +93,7 @@
                         </p>
                         <p class="tip-for">起止日期：2015.03.01 至 2015.08.31</p>
                         <p class="tip-for">
+                            <span>顾斐，蓝海老师</span>
                             <span>课程满意度：<strong>92.52</strong></span>
                             <span>已购买：<strong>230</strong></span>
                         </p>
