--- a/source/widget/courseStudycenter/courseList.html
+++ b/source/widget/courseStudycenter/courseList.html
@@ -14,10 +14,18 @@
     <body>
         <div class="row">
             <div class="large-12 columns">
-                <div class="layout-list">
+                <div class="courselayout-list">
                     <div class="courseList-title">
                         <p>初一数学目标满分班人教版 录播课程</p>
                     </div>
+                    <ul class="teacher-tab">
+                        <li class="current">1-20</li>
+                        <li>21-40</li>
+                        <li>41-60</li>
+                        <li>61-80</li>
+                        <li>80-100</li>
+                        <li>附赠奖</li>
+                    </ul>
                     <table class="table course-table">
                         <thead>
                             <tr>
@@ -36,7 +44,7 @@
                             </tr>
                             <tr>
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style studied-end">已学到</td>
+                                <td class="text-style studied-end">上次学到了</td>
                                 <td class="text-style">
                                     <a class="alert button course-btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
                                 </td>
@@ -44,7 +52,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="layout-list">
+                <div class="courselayout-list">
                     <div class="courseList-title">
                         <p>初一数学目标满分班人教版 直播课程大纲</p>
                     </div>
@@ -97,76 +105,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="layout-list">
-                    <div class="courseList-title">
-                        <p>初一数学人教版目标满分班 作业</p>
-                    </div>
-                    <ul class="teacher-tab">
-                        <li class="current">全部</li>
-                        <li>待提交</li>
-                        <li>已驳回</li>
-                        <li>已批改</li>
-                    </ul>
-                    <table class="table course-table">
-                        <thead>
-                            <tr>
-                                <th width="35%">名称</th>
-                                <th width="15%">状态</th>
-                                <th width="30%">操作</th>
-                                <th width="20%">时间</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style yellow-mark">未参加</td>
-                                <td class="text-style">
-                                    <a class="button course-btn" href="##">查看作业</a>
-                                    <a class="button course-btn course-btn-gray" href="##" >查看批改</a>
-                                </td>
-                                <td class="studied-end">2015-8-10  9:00 提交截止</td>
-                            </tr>
-                            <tr>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style yellow-mark">未参加</td>
-                                <td class="text-style">
-                                    <a class="button course-btn" href="##">查看作业</a>
-                                    <a class="button course-btn course-btn-gray" href="##" >查看批改</a>
-                                </td>
-                                <td class="">2015-8-10  9:00 提交截止</td>
-                            </tr>
-                            <tr>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style yellow-mark">已驳回</td>
-                                <td class="text-style">
-                                    <a class="button course-btn" href="##">查看作业</a>
-                                    <a class="button course-btn success " href="##" >查看批改</a>
-                                </td>
-                                <td class="">2015-8-10  9:00 </td>
-                            </tr>
-                            <tr>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style studied">已批改</td>
-                                <td class="text-style">
-                                    <a class="button course-btn" href="##">查看作业</a>
-                                    <a class="button course-btn success " href="##" >查看批改</a>
-                                </td>
-                                <td class="">2015-8-10  9:00 </td>
-                            </tr>
-                            <tr>
-                                <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style wait-look">待批改</td>
-                                <td class="text-style">
-                                    <a class="button course-btn" href="##">查看作业</a>
-                                    <a class="button course-btn success " href="##" >查看批改</a>
-                                </td>
-                                <td class="">2015-8-10  9:00 </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="layout-list">
+                <!-- <div class="courselayout-list">
                     <div class="courseList-title">
                         <p>初一数学人教版目标满分班 课堂笔记</p>
                     </div>
@@ -192,7 +131,7 @@
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
                                 <td class="text-style">未上传</td>
                                 <td class="text-style">
-                                    <a class="button course-btn course-btn-gray" href="##" >立即查看</a>
+                                    <a class="button course-btn course-btn-gray" disabled href="##" >立即查看</a>
                                 </td>
                                 <td class="text-style">2015-8-10  9:00 </td>
                             </tr>
@@ -206,9 +145,9 @@
                             </tr>
                         </tbody>
                     </table>
-                </div>
+                </div> -->
 
-                <div class="layout-list">
+                <div class="courselayout-list">
                     <div class="courseList-title">
                         <p>初一数学人教版目标满分班 随堂测</p>
                     </div>
@@ -226,7 +165,7 @@
                                 <td class="text-style  studied-end">未提交<span>（提交已截止）</span></td>
                                 <td class="text-style">
                                     <a class="button course-btn" href="##">查看作业</a>
-                                    <a class="button course-btn course-btn-gray" href="##" >查看批改</a>
+                                    <a class="button course-btn course-btn-gray" disabled href="##" >查看批改</a>
                                 </td>
                             </tr>
                             <tr>
@@ -237,7 +176,7 @@
                                 </td>
                                 <td class="text-style">
                                     <a class="button course-btn" href="##">查看作业</a>
-                                    <a class="button course-btn course-btn-gray" href="##" >查看批改</a>
+                                    <a class="button course-btn course-btn-gray" disabled href="##" >查看批改</a>
                                 </td>
                             </tr>
                             <tr>
