Signed-off-by: zhixiaoyang <913151232@qq.com>

--- a/source/widget/courseStudycenter/courseList.html
+++ b/source/widget/courseStudycenter/courseList.html
@@ -44,7 +44,7 @@
                             </tr>
                             <tr>
                                 <td>第1讲     初一数学目标满分班人教版 第一场直播</td>
-                                <td class="text-style studied-end">上次学到了</td>
+                                <td class="text-style studied-end">上次学到</td>
                                 <td class="text-style">
                                     <a class="alert button course-btn" href="##"><em class="button-icon icon-just-white"></em>立即学习</a>
                                 </td>
