--- a/source/widget/courses/index.html
+++ b/source/widget/courses/index.html
@@ -19,15 +19,14 @@
                         <div class="avatar-photo">
                             <img src="img/default_photo.png">
                         </div>
-                        <div class="avatar-follow add">
-                            <em>+</em>
-                            关注 
+                        <div class="fresh-course-attention" data-url="/teachers/follow/" data-value="840" data-params="urlStr=840&urlKey=af0030c654f79b371438ebdf40d4bead" data-type="3">
+                            <a class="fresh-attention-btn fresh-add-attention-btn" href="javascript:void(0)"><span class="fresh-add left">+</span><span class="left">关注</span></a>
                         </div>
                     </div>
                     <div class="course-detail">
                         <p class="course-teacher">
                             <a target="_blank"  href="###" class="ui-username">赵紫涵</a>
-                            <i title="学而思网校认证老师" class="icon icon-yverify"></i>
+                            <i title="学而思网校认证老师" class="course-icon icon-yverify"></i>
                             <span class="teacher-label">数学老师</span>
                         </p>
                         <p class="course-title">
