--- a/source/widget/personalCenter/centerHeader.html
+++ b/source/widget/personalCenter/centerHeader.html
@@ -34,7 +34,7 @@
         <!--<div class="centerHeader-intro-teacher">王帆<span class="centerHeader-intro-teacher-more">语文老师</span>-->
         <!--<img class="teacher-prize1" src="img/teacher-prize1.png"/>-->
         <!--<img class="teacher-prize2" src="img/teacher-prize2.png">-->
-        <!--<img class="teacher-prize3" src="img/taecher-prize3.png" />-->
+        <!--<img class="teacher-prize3" src="img/teacher-prize3.png" />-->
         <!--</div>-->
 
         <!--3、学生主页-->
