--- a/source/widget/find-teacher/find-teacher.html
+++ b/source/widget/find-teacher/find-teacher.html
@@ -4,37 +4,35 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>find-teacher</title>
+    <title>找老师</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <!-- 这是CSS库文件 -->
     <link rel="stylesheet" type="text/css" href="../../lib/foundation/css/foundation.css">
     <!-- 这是当前模块样式文件 -->
     <link href="find-teacher.css" rel="stylesheet">
-    <script src="../../lib/jQuery/1.11.1/jquery.js"></script>
-    <script src="find-teacher.js"></script>
 </head>
 <body>
 <div class="find-teacher-container">
     <div class="find-teacher-rank-title">
         <div>综合</div>
-        <span>教学满意度<img src="../img/down.png" /></span>
-        <span>课程数<img src="../img/down.png" /></span>
-        <span>学员数<img src="../img/down.png" /></span>
-        <span>粉丝数<img src="../img/down.png" /></span>
+        <span>教学满意度<img src="img/down.png" /></span>
+        <span>课程数<img src="img/down.png" /></span>
+        <span>学员数<img src="img/down.png" /></span>
+        <span>粉丝数<img src="img/down.png" /></span>
         <span class="find-teacher-account">共有<em>172</em>名老师</span>
     </div>
     <div class="find-teacher-list">
         <div class="find-teacher-card">
             <div class="find-teacher-intro">
                 <div class="find-teacher-hover-container">
-                    <img src="../img/teacher-photo.png" class="find-teacher-photo"/>
+                    <img src="img/teacher-photo.png" class="find-teacher-photo"/>
                     <div class='find-teacher-photo-hover' style="top: 200px;"></div>
-                    <span class="find-teacher-follow" style="top: 390px;" onclick="follow()">＋关注</span>
+                    <span class="find-teacher-follow" style="top: 390px;">＋关注</span>
                 </div>
                 <div class="find-teacher-information">
                     <span class="find-teacher-name">顾斐</span>
-                    <img src="../img/v.png" class="find-teacher-v"/>
+                    <img src="img/v.png" class="find-teacher-v"/>
                     <span class="find-teacher-sort">数学老师</span>
                 </div>
             </div>
@@ -44,20 +42,20 @@
                 <span>2015学年一升二年级奥数年卡(竞赛班)</span>
             </div>
             <div class="find-teacher-statistics">
-                <span class="find-teacher-data-statistics"><img src="../img/ic_heart.png" />92.52</span>
-                <span class="find-teacher-data-statistics"><img src="../img/ic_user.png" />444230</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_heart.png" />92.52</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_user.png" />444230</span>
             </div>
         </div>
         <div class="find-teacher-card">
             <div class="find-teacher-intro">
                 <div class="find-teacher-hover-container">
-                    <img src="../img/teacher-photo.png" class="find-teacher-teacher-photo"/>
+                    <img src="img/teacher-photo.png" class="find-teacher-teacher-photo"/>
                     <div class='find-teacher-photo-hover' style="top: 200px;"></div>
-                    <span class="find-teacher-follow" style="top: 390px;" onclick="follow()">＋关注</span>
+                    <span class="find-teacher-follow" style="top: 390px;">＋关注</span>
                 </div>
                 <div class="find-teacher-information">
                     <span class="find-teacher-name">顾斐</span>
-                    <img src="../img/v.png" class="find-teacher-v"/>
+                    <img src="img/v.png" class="find-teacher-v"/>
                     <span class="find-teacher-sort">数学老师</span>
                 </div>
             </div>
@@ -67,20 +65,20 @@
                 <span>2015学年一升二年级奥数年卡(竞赛班)</span>
             </div>
             <div class="find-teacher-statistics">
-                <span class="find-teacher-data-statistics"><img src="../img/ic_heart.png" />92.52</span>
-                <span class="find-teacher-data-statistics"><img src="../img/ic_user.png" />444230</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_heart.png" />92.52</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_user.png" />444230</span>
             </div>
         </div>
         <div class="find-teacher-card">
             <div class="find-teacher-intro">
                 <div class="find-teacher-hover-container">
-                    <img src="../img/teacher-photo.png" class="find-teacher-photo"/>
+                    <img src="img/teacher-photo.png" class="find-teacher-photo"/>
                     <div class='find-teacher-photo-hover' style="top: 200px;"></div>
-                    <span class="find-teacher-follow" style="top: 390px;" onclick="follow()">＋关注</span>
+                    <span class="find-teacher-follow" style="top: 390px;">＋关注</span>
                 </div>
                 <div class="find-teacher-information">
                     <span class="find-teacher-name">顾斐</span>
-                    <img src="../img/v.png" class="find-teacher-v"/>
+                    <img src="img/v.png" class="find-teacher-v"/>
                     <span class="find-teacher-sort">数学老师</span>
                 </div>
             </div>
@@ -90,20 +88,20 @@
                 <span>2015学年一升二年级奥数年卡(竞赛班)</span>
             </div>
             <div class="find-teacher-statistics">
-                <span class="find-teacher-data-statistics"><img src="../img/ic_heart.png" />92.52</span>
-                <span class="find-teacher-data-statistics"><img src="../img/ic_user.png" />444230</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_heart.png" />92.52</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_user.png" />444230</span>
             </div>
         </div>
         <div class="find-teacher-card">
             <div class="find-teacher-intro">
                 <div class="find-teacher-hover-container">
-                    <img src="../img/teacher-photo.png" class="find-teacher-photo"/>
+                    <img src="img/teacher-photo.png" class="find-teacher-photo"/>
                     <div class='find-teacher-photo-hover' style="top: 200px;"></div>
-                    <span class="find-teacher-follow" style="top: 390px;" onclick="follow()">＋关注</span>
+                    <span class="find-teacher-follow" style="top: 390px;">＋关注</span>
                 </div>
                 <div class="find-teacher-information">
                     <span class="find-teacher-name">顾斐</span>
-                    <img src="../img/v.png" class="find-teacher-v"/>
+                    <img src="img/v.png" class="find-teacher-v"/>
                     <span class="find-teacher-sort">数学老师</span>
                 </div>
             </div>
@@ -113,20 +111,20 @@
                 <span>2015学年一升二年级奥数年卡(竞赛班)</span>
             </div>
             <div class="find-teacher-statistics">
-                <span class="find-teacher-data-statistics"><img src="../img/ic_heart.png" />92.52</span>
-                <span class="find-teacher-data-statistics"><img src="../img/ic_user.png" />444230</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_heart.png" />92.52</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_user.png" />444230</span>
             </div>
         </div>
         <div class="find-teacher-card">
             <div class="find-teacher-intro">
                 <div class="find-teacher-hover-container">
-                    <img src="../img/teacher-photo.png" class="find-teacher-photo"/>
+                    <img src="img/teacher-photo.png" class="find-teacher-photo"/>
                     <div class='find-teacher-photo-hover' style="top: 200px;"></div>
-                    <span class="find-teacher-follow" style="top: 390px;" onclick="follow()">＋关注</span>
+                    <span class="find-teacher-follow" style="top: 390px;">＋关注</span>
                 </div>
                 <div class="find-teacher-information">
                     <span class="find-teacher-name">顾斐</span>
-                    <img src="../img/v.png" class="find-teacher-v"/>
+                    <img src="img/v.png" class="find-teacher-v"/>
                     <span class="find-teacher-sort">数学老师</span>
                 </div>
             </div>
@@ -136,11 +134,13 @@
                 <span>2015学年一升二年级奥数年卡(竞赛班)</span>
             </div>
             <div class="find-teacher-statistics">
-                <span class="find-teacher-data-statistics"><img src="../img/ic_heart.png" />92.52</span>
-                <span class="find-teacher-data-statistics"><img src="../img/ic_user.png" />444230</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_heart.png" />92.52</span>
+                <span class="find-teacher-data-statistics"><img src="img/ic_user.png" />444230</span>
             </div>
         </div>
     </div>
 </div>
+<script src="../../lib/jQuery/1.11.1/jquery.js"></script>
+<script src="find-teacher.js"></script>
 </body>
 </html>
