--- a/source/widget/live/live.html
+++ b/source/widget/live/live.html
@@ -30,14 +30,14 @@
             <div class="live-scroll-box">
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo1.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>韬哥认为你一定 会的小学知识点</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>08-23 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -47,14 +47,14 @@
                 </div>
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo2.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>攻克电磁学 章鱼军团逆袭计划之路</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>今天 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -64,14 +64,14 @@
                 </div>
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo3.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>［轻松写作］初中必考亲情作文</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>今天 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -81,14 +81,14 @@
                 </div>
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo4.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>［老杜物理］理科学霸征集令第一讲</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>今天 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -100,14 +100,14 @@
             <div class="live-scroll-box">
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo1.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>韬哥认为你一定 会的小学知识点</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>08-23 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -117,14 +117,14 @@
                 </div>
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo2.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>攻克电磁学 章鱼军团逆袭计划之路</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>今天 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -134,14 +134,14 @@
                 </div>
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo3.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>［轻松写作］初中必考亲情作文</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>今天 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -151,14 +151,14 @@
                 </div>
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo4.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>［老杜物理］理科学霸征集令第一讲</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>今天 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -170,14 +170,14 @@
             <div class="live-scroll-box">
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo1.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>韬哥认为你一定 会的小学知识点</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>08-23 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -187,14 +187,14 @@
                 </div>
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo2.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>攻克电磁学 章鱼军团逆袭计划之路</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>今天 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -204,14 +204,14 @@
                 </div>
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo3.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>［轻松写作］初中必考亲情作文</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>今天 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -221,14 +221,14 @@
                 </div>
                 <div class="live-card">
                     <div class="live-course-box">
-                        <img src="../img/live-teacher-photo4.png" class="live-teacher-photo"/>
+                        <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
                         <div class="live-course-title"></div>
                         <span>［老杜物理］理科学霸征集令第一讲</span>
                     </div>
                     <div class="live-time-tip">
                         <div class="live-time-tip-container">
                             <span>今天 15:30-16:30</span>
-                            <img src="../img/ic_views.png" />
+                            <img src="img/ic_views.png" />
                             <p>4612453</p>
                         </div>
                     </div>
@@ -248,14 +248,14 @@
     <div class="live-list">
         <div class="live-card">
             <div class="live-course-box">
-                <img src="../img/live-teacher-photo1.png" class="live-teacher-photo"/>
+                <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
                 <div class="live-course-title"></div>
                 <span>韬哥认为你一定 会的小学知识点</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
                     <span>08-23 15:30-16:30</span>
-                    <img src="../img/ic_views.png" />
+                    <img src="img/ic_views.png" />
                     <p>4612453</p>
                 </div>
             </div>
@@ -265,14 +265,14 @@
         </div>
         <div class="live-card">
             <div class="live-course-box">
-                <img src="../img/live-teacher-photo2.png" class="live-teacher-photo"/>
+                <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
                 <div class="live-course-title"></div>
                 <span>攻克电磁学 章鱼军团逆袭计划之路</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
                     <span>今天 15:30-16:30</span>
-                    <img src="../img/ic_views.png" />
+                    <img src="img/ic_views.png" />
                     <p>4612453</p>
                 </div>
             </div>
@@ -282,14 +282,14 @@
         </div>
         <div class="live-card">
             <div class="live-course-box">
-                <img src="../img/live-teacher-photo3.png" class="live-teacher-photo"/>
+                <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
                 <div class="live-course-title"></div>
                 <span>［轻松写作］初中必考亲情作文</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
                     <span>今天 15:30-16:30</span>
-                    <img src="../img/ic_views.png" />
+                    <img src="img/ic_views.png" />
                     <p>4612453</p>
                 </div>
             </div>
@@ -299,14 +299,14 @@
         </div>
         <div class="live-card">
             <div class="live-course-box">
-                <img src="../img/live-teacher-photo4.png" class="live-teacher-photo"/>
+                <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
                 <div class="live-course-title"></div>
                 <span>［老杜物理］理科学霸征集令第一讲</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
                     <span>今天 15:30-16:30</span>
-                    <img src="../img/ic_views.png" />
+                    <img src="img/ic_views.png" />
                     <p>4612453</p>
                 </div>
             </div>
@@ -316,14 +316,14 @@
         </div>
         <div class="live-card">
             <div class="live-course-box">
-                <img src="../img/live-teacher-photo1.png" class="live-teacher-photo"/>
+                <img src="img/live-teacher-photo1.png" class="live-teacher-photo"/>
                 <div class="live-course-title"></div>
                 <span>韬哥认为你一定 会的小学知识点</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
                     <span>08-23 15:30-16:30</span>
-                    <img src="../img/ic_views.png" />
+                    <img src="img/ic_views.png" />
                     <p>4612453</p>
                 </div>
             </div>
@@ -333,14 +333,14 @@
         </div>
         <div class="live-card">
             <div class="live-course-box">
-                <img src="../img/live-teacher-photo2.png" class="live-teacher-photo"/>
+                <img src="img/live-teacher-photo2.png" class="live-teacher-photo"/>
                 <div class="live-course-title"></div>
                 <span>攻克电磁学 章鱼军团逆袭计划之路</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
                     <span>今天 15:30-16:30</span>
-                    <img src="../img/ic_views.png" />
+                    <img src="img/ic_views.png" />
                     <p>4612453</p>
                 </div>
             </div>
@@ -350,14 +350,14 @@
         </div>
         <div class="live-card">
             <div class="live-course-box">
-                <img src="../img/live-teacher-photo3.png" class="live-teacher-photo"/>
+                <img src="img/live-teacher-photo3.png" class="live-teacher-photo"/>
                 <div class="live-course-title"></div>
                 <span>［轻松写作］初中必考亲情作文</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
                     <span>今天 15:30-16:30</span>
-                    <img src="../img/ic_views.png" />
+                    <img src="img/ic_views.png" />
                     <p>4612453</p>
                 </div>
             </div>
@@ -367,14 +367,14 @@
         </div>
         <div class="live-card">
             <div class="live-course-box">
-                <img src="../img/live-teacher-photo4.png" class="live-teacher-photo"/>
+                <img src="img/live-teacher-photo4.png" class="live-teacher-photo"/>
                 <div class="live-course-title"></div>
                 <span>［老杜物理］理科学霸征集令第一讲</span>
             </div>
             <div class="live-time-tip">
                 <div class="live-time-tip-container">
                     <span>今天 15:30-16:30</span>
-                    <img src="../img/ic_views.png" />
+                    <img src="img/ic_views.png" />
                     <p>4612453</p>
                 </div>
             </div>
