Signed-off-by: zhixiaoyang <913151232@qq.com>

--- a/source/widget/courses/hot-list.html
+++ b/source/widget/courses/hot-list.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="course-detail">
-                        <p class="course-teacher">
+                        <p class="course-title">
                             <a target="_blank"  href="###" class="title-detail">【飞遍化学】炸开你的化学世界大门(第三季)——大揭秘 </a>
                         </p>
                         <p class="avatar-name">
