--- a/source/widget/myCollect/index.html
+++ b/source/widget/myCollect/index.html
@@ -18,7 +18,7 @@
                     <div class="collect-feed">
                         <div class="collect-avatar">
                             <img src="http://img04.xesimg.com/icon/avatar_d.jpg">
-                            <span>朱韬</span>
+                            <span>小明</span>
                         </div>
                         <div class="collect-detail ">
                             <p class="jzh-name"> 我收藏一个链接 </p>
